remove unneeded source and javadoc